--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -10,3 +10,10 @@ en:
     store_credit_not_integer: Amount not integer
     invalid_format: Invalid CSV file format.
     successfull_update: Successfully Updated
+    bulk_store_credit: Bulk Store Credit
+    add_store_credit: Add Store Credit
+    credit_value: Credit Value
+    add_value: Give Store Credit
+    email_sent_for_users_credit: Details will be sent shortly to you over an email
+    integer_value_only: Please Enter Integer Value as Credit Value
+    admin_added_via_list: Admin Added Via List
